=======
CHANGES
=======

-----
0.6.2
-----


-----
0.6.1
-----

setuptools
==========

* package_index.urlopen now catches BadStatusLine and malformed url errors.
  This closes http://bitbucket.org/tarek/distribute/issue/16 and
  http://bitbucket.org/tarek/distribute/issue/18.

* zip_ok is now True by default. This closes 
  http://bugs.python.org/setuptools/issue33.

* Fixed invalid URL error catching. http://bugs.python.org/setuptools/issue20.

* Fixed invalid bootstraping with easy_install installation
  http://bitbucket.org/tarek/distribute/issue/40.
  Thanks to Florian Schulze for the help.

* Removed buildout/bootstrap.py. A new repository will create a specific
  bootstrap.py script.


bootstraping
============

* The boostrap process leave setuptools alone if detected in the system
  and --root or --prefix is provided, but is not in the same location.
  This closes http://bitbucket.org/tarek/distribute/issue/10.

---
0.6
---

setuptools
==========

* Packages required at build time where not fully present at install time.
  This closes http://bitbucket.org/tarek/distribute/issue/12.

* Protected against failures in tarfile extraction. This closes
  http://bitbucket.org/tarek/distribute/issue/10.

* Made Jython api_tests.txt doctest compatible. This closes
  http://bitbucket.org/tarek/distribute/issue/7.

* sandbox.py replaced builtin type file with builtin function open. This
  closes http://bitbucket.org/tarek/distribute/issue/6.

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.

* Added compatibility with Subversion 1.6. This references
  http://bitbucket.org/tarek/distribute/issue/1.

pkg_resources
=============

* Avoid a call to /usr/bin/sw_vers on OSX and use the official platform API
  instead. Based on a patch from ronaldoussoren. This closes
  http://bitbucket.org/tarek/distribute/issue/5.

* Fixed a SandboxViolation for mkdir that could occur in certain cases.